k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: darip
  labels:
    istio-injection: enabled
    environment: base
